[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dash"
version = "0.0.1"
authors = [
  { name="Henry Martin", email="n3rdl0rd@proton.me" },
]
description = "A powerful and lightweight package manager for any Linux distribution."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]
dependencies = [
  "betterlib==0.2.0",
  "requests==2.28.1",
]

[project.urls]
"Homepage" = "https://github.com/HENRYMARTIN5/dash"
"Bug Tracker" = "https://github.com/HENRYMARTIN5/dash/issues"
